<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TransparentText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/drawable_gradient_purple"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imagePhoto"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:paddingTop="30dp"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/user_name"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/user_name"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="8dp"
                        tools:text="company"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="20dp"
                        app:cardCornerRadius="18dp"
                        app:cardElevation="8dp">

                        <LinearLayout
                            android:baselineAligned="false"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/followers"
                                    android:textColor="@android:color/black"
                                    android:textSize="15sp" />

                                <TextView
                                    android:id="@+id/tvFollowers"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_100"
                                    android:textColor="@android:color/black"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/following"
                                    android:textColor="@android:color/black"
                                    android:textSize="15sp" />

                                <TextView
                                    android:id="@+id/tvFollowing"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_100"
                                    android:textColor="@android:color/black"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/repository"
                                    android:textColor="@android:color/black"
                                    android:textSize="15sp"
                                    tools:ignore="HardcodedText" />

                                <TextView
                                    android:id="@+id/tvRepository"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="100"
                                    android:textColor="@android:color/black"
                                    android:textSize="15sp"
                                    android:textStyle="bold"
                                    tools:ignore="HardcodedText" />

                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>



        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:tabBackground="@drawable/tab_layout_selector"
            app:tabIndicatorColor="@android:color/holo_purple"
            app:tabSelectedTextColor="@color/primary"
            app:tabTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/progressBarStyle"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchor="@id/viewPager"
        app:layout_anchorGravity="bottom|end"
        android:elevation="6dp"
        android:src="@drawable/ic_favorite_grey"
        app:tint="@null"
        tools:ignore="RelativeOverlap"
        android:contentDescription="@string/favorite"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>