<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fav_button"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite_white"
        app:showAsAction="always"/>
    <item
        android:id="@+id/setting_button"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings_white"
        app:showAsAction="ifRoom"/>
</menu>